доделаны отклики на вакансии и получение вакансий
